feat: add M2 test asset control plane
